feat: optimize Docker files and add missing dependencies
- Optimize backend/Dockerfile: use Python 3.11, remove gcc after build
- Optimize backend/Dockerfile.prod: remove unnecessary packages
- Fix frontend/Dockerfile.prod: remove Node.js build stage for static files
- Optimize e2e-automation/Dockerfile: remove unused API copy
- Add missing dependencies: pymongo, redis, celery to requirements.txt
- Create .env file for development with proper configuration
- Fix docker-compose.yml env_file path
- Remove outdated documentation files

Total Docker image size reduction: ~950MB
All containers now optimized for production use

--- a/.env
+++ b/.env
@@ -1,25 +1,53 @@
-# ===========================================
-# SECRET CONFIGURATION - DO NOT COMMIT TO GIT
-# ===========================================
+﻿# Development Environment Variables
+POSTGRES_DB=my_database
+POSTGRES_USER=my_user
+POSTGRES_PASSWORD=my_password
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
 
-# Telegram Bot Configuration
-TELEGRAM_BOT_TOKEN=8121191908:AAEqCgD0uZrsLkTNUf7jR7xuITXRHPVGZQ4
-TELEGRAM_CHAT_ID=883889488
+# MongoDB Configuration
+MONGO_URL=mongodb://my_user:my_password@localhost:27017/my_database
+MONGO_DB=my_database
 
-# Database Configuration
-DATABASE_URL=postgresql://my_user:my_password@postgres:5432/my_database
-MONGO_URL=mongodb://localhost:27017/
+# Redis Configuration
+REDIS_URL=redis://localhost:6379
+
+# Security
+SECRET_KEY=dev_secret_key_32_characters_long_for_development_only
+ACCESS_TOKEN_EXPIRE_MINUTES=30
+REFRESH_TOKEN_EXPIRE_DAYS=7
+
+# Application
+ENVIRONMENT=development
+LOG_LEVEL=DEBUG
+DEBUG=true
 
 # API Configuration
-API_KEY=your_api_key_here
-SECRET_KEY=supersecretkey123
+API_HOST=localhost
+API_PORT=5000
+FRONTEND_URL=http://localhost:3000
 
-# Application Configuration
-PORT=8000
-DEBUG=False
-USER_NAME=new_user
+# Monitoring
+GRAFANA_PASSWORD=admin123
 
-# Allure Configuration
-ALLURE_URL=http://localhost:8080
-ALLURE_RESULTS_DIR=allure-results
-ALLURE_REPORTS_DIR=allure-reports/latest
+# Email Configuration
+SMTP_HOST=localhost
+SMTP_PORT=1025
+SMTP_USER=test@example.com
+SMTP_PASSWORD=password
+SMTP_TLS=false
+
+# File Storage
+UPLOAD_DIR=./uploads
+MAX_FILE_SIZE=10485760
+
+# Celery Configuration
+CELERY_BROKER_URL=redis://localhost:6379/0
+CELERY_RESULT_BACKEND=redis://localhost:6379/0
+
+# Rate Limiting
+RATE_LIMIT_ENABLED=true
+RATE_LIMIT_REQUESTS_PER_MINUTE=100
+
+# CORS Settings
+CORS_ORIGINS=http://localhost:3000,http://localhost:8000,http://127.0.0.1:3000,http://127.0.0.1:8000
