--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,14 +1,20 @@
-FROM python:3.13-rc-slim
+FROM python:3.11-slim
 
-# Install system dependencies for PostgreSQL
+WORKDIR /app
+
+# Copy requirements first for better caching
+COPY requirements.txt .
+
+# Install system dependencies for PostgreSQL and build tools
 RUN apt-get update && apt-get install -y \
     gcc \
     libpq-dev \
+    && pip install --no-cache-dir -r requirements.txt \
+    && apt-get purge -y gcc \
+    && apt-get autoremove -y \
     && rm -rf /var/lib/apt/lists/*
 
-WORKDIR /app
-COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+# Copy application code
 COPY . .
 
 CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "5000"]
