--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -22,6 +22,13 @@ pillow==10.4.0  # Image processing
 aiofiles==24.1.0  # Async file operations
 aiohttp==3.9.1  # HTTP client for integrations
 
+# Database drivers
+pymongo==4.6.1  # MongoDB driver
+redis==5.0.1  # Redis driver
+
+# Async task queue
+celery==5.3.4  # Asynchronous task queue
+
 # Testing dependencies
 pytest==8.3.4
 pytest-asyncio==0.24.0
