--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -1,29 +1,11 @@
 # Production Dockerfile for Frontend
-FROM node:18-alpine as build
-
-# Set working directory
-WORKDIR /app
-
-# Copy package files
-COPY package*.json ./
-
-# Install dependencies
-RUN npm ci --only=production
-
-# Copy source code
-COPY . .
-
-# Build the application
-RUN npm run build
-
-# Production stage
 FROM nginx:alpine
 
-# Copy built assets from build stage
-COPY --from=build /app/dist /usr/share/nginx/html
+# Copy static files
+COPY . /usr/share/nginx/html
 
-# Copy nginx configuration
-COPY nginx.conf /etc/nginx/conf.d/default.conf
+# Copy nginx configuration if exists
+COPY nginx.conf /etc/nginx/conf.d/default.conf 2>/dev/null || true
 
 # Create nginx user and set permissions
 RUN addgroup -g 1001 -S nginx && \
@@ -43,7 +25,7 @@ EXPOSE 80
 
 # Health check
 HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
-    CMD curl -f http://localhost:80 || exit 1
+    CMD wget --no-verbose --tries=1 --spider http://localhost:80 || exit 1
 
 # Start nginx
 CMD ["nginx", "-g", "daemon off;"]
