feat: Implement comprehensive test data seeding and fix frontend issues
- Add comprehensive test data seeding for all modules:
  * E-commerce: 5 products with categories, pricing, and stock
  * Social Network: 5 engaging posts with Russian content
  * Task Management: 3 project boards with 9 task cards
  * Content Management: 4 categories and 5 published articles
  * Analytics: 6 metrics, reports, and dashboard widgets

- Fix frontend authentication and API issues:
  * Correct token storage and refresh logic in auth.js
  * Fix API endpoint configuration for browser access
  * Add proper error handling and debug logging
  * Fix WebSocket connection configuration

- Fix backend model compatibility:
  * Correct model imports and field names
  * Fix enum value representations
  * Implement proper foreign key relationships
  * Add missing dependencies (websockets, wsproto)

- Add environment configuration:
  * Create .env file with development settings
  * Configure proper CORS and API endpoints

- Fix frontend module loading issues:
  * Add missing updateNotificationBadge method
  * Fix TypeError in notifications.js
  * Improve script loading order and error handling

This resolves the uniform content issue across all tabs and ensures
proper data display on all module pages.

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,5 @@
 fastapi==0.116.1
-uvicorn==0.35.0
+uvicorn[standard]==0.35.0
 sqlalchemy==2.0.43
 psycopg2-binary==2.9.10
 pydantic==2.11.7
@@ -28,6 +28,10 @@ redis==5.0.1  # Redis driver
 
 # Async task queue
 celery==5.3.4  # Asynchronous task queue
+
+# WebSocket dependencies
+websockets==12.0  # WebSocket support for uvicorn
+wsproto==1.2.0  # WebSocket protocol implementation
 
 # Testing dependencies
 pytest==8.3.4
