--- a/.env
+++ b/.env
@@ -1,16 +1,13 @@
-﻿# Development Environment Variables
+# development Environment Variables
+# Copy this file to .env.prod and fill in the values
+
+# Database Configuration
 POSTGRES_DB=my_database
 POSTGRES_USER=my_user
 POSTGRES_PASSWORD=my_password
-POSTGRES_HOST=localhost
-POSTGRES_PORT=5432
-
-# MongoDB Configuration
-MONGO_URL=mongodb://my_user:my_password@localhost:27017/my_database
-MONGO_DB=my_database
 
 # Redis Configuration
-REDIS_URL=redis://localhost:6379
+REDIS_URL=redis://redis:6379
 
 # Security
 SECRET_KEY=dev_secret_key_32_characters_long_for_development_only
@@ -22,32 +19,21 @@ ENVIRONMENT=development
 LOG_LEVEL=DEBUG
 DEBUG=true
 
-# API Configuration
-API_HOST=localhost
-API_PORT=5000
-FRONTEND_URL=http://localhost:3000
-
 # Monitoring
-GRAFANA_PASSWORD=admin123
+GRAFANA_PASSWORD=your_grafana_admin_password
 
-# Email Configuration
-SMTP_HOST=localhost
-SMTP_PORT=1025
-SMTP_USER=test@example.com
-SMTP_PASSWORD=password
-SMTP_TLS=false
+# SSL/TLS (for HTTPS)
+SSL_CERT_PATH=/etc/nginx/ssl/cert.pem
+SSL_KEY_PATH=/etc/nginx/ssl/key.pem
+
+# External Services (if needed)
+# SMTP_HOST=smtp.gmail.com
+# SMTP_PORT=587
+# SMTP_USER=your_email@gmail.com
+# SMTP_PASSWORD=your_app_password
 
 # File Storage
-UPLOAD_DIR=./uploads
-MAX_FILE_SIZE=10485760
-
-# Celery Configuration
-CELERY_BROKER_URL=redis://localhost:6379/0
-CELERY_RESULT_BACKEND=redis://localhost:6379/0
-
-# Rate Limiting
-RATE_LIMIT_ENABLED=true
-RATE_LIMIT_REQUESTS_PER_MINUTE=100
-
-# CORS Settings
-CORS_ORIGINS=http://localhost:3000,http://localhost:8000,http://127.0.0.1:3000,http://127.0.0.1:8000
+# AWS_ACCESS_KEY_ID=your_aws_access_key
+# AWS_SECRET_ACCESS_KEY=your_aws_secret_key
+# AWS_S3_BUCKET=your_bucket_name
+# AWS_REGION=us-east-1
